--- a/mern/package.json
+++ b/mern/package.json
@@ -40,6 +40,7 @@
     "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-sortable-hoc": "^0.8.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.2.0",
