--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "MERN-boilerplate",
+  "name": "Engagement-Lab-TV",
   "version": "1.0.0",
-  "description": "MERN stack project boilerplate",
-  "author": "Eugene Cheung",
+  "description": "Web app for EL lobby TV",
+  "author": "Johnny Richardson",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arkon/MERN-boilerplate.git"
+    "url": "git+https://github.com/engagementgamelab/el-tv.git"
   },
   "license": "MIT",
   "private": true,
@@ -14,16 +14,18 @@
     "start:dev": "node server"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "dependencies": {
     "@babel/core": "^7.1.2",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
     "autoprefixer": "^8.2.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^1.0.0",
@@ -40,6 +42,7 @@
     "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-slidez": "0.0.30",
     "react-sortable-hoc": "^0.8.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
@@ -52,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-react": "^7.0.0"
+    "@babel/preset-react": "^7.0.0",
+    "uglifyjs-webpack-plugin": "^2.0.1"
   }
 }
