--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "image-downloader": "^3.5.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "request": "^2.88.0",
+    "shelljs": "^0.8.3",
     "socket.io": "^2.1.1"
   }
 }
